@@ -13,9 +13,10 @@ LITTLE_OUTPUT_FORMAT="elf32-littlemips"
 TEMPLATE_NAME=elf32
 EXTRA_EM_FILE=mipself
 
-case "$EMULATION_NAME" in
-elf32*n32*) ELFSIZE=32 ;;
-elf64*) ELFSIZE=64 ;;
+case x"$EMULATION_NAME" in
+xelf32*n32*) ELFSIZE=32 ;;
+xelf64*) ELFSIZE=64 ;;
+x) ;;
 *) echo $0: unhandled emulation $EMULATION_NAME >&2; exit 1 ;;
 esac
 
